# trabajo_de_grado_encryptai

./: README.md  des.py  pyproject.toml  requirements.txt
tesis/: Aimodel.py  Encryption.py  analisis.py  attack.py  des.py  main.py  newDes.py  prueba.py  test.py
tesis-env/: pyvenv.cfg
tesis-env/Scripts/: activate  activate.bat  get_gprof  get_objgraph  undill
