[tool.poetry]
name = "tesis"
version = "0.1.0"
description = ""
authors = ["juan pablo sanchez gaitan <juansanchezg@javeriana.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pymoo = "^0.6.1.1"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
